shared worker: Fix default loader when S13nServiceWorker is enabled and NetworkService is disabled.

When S13nSW was enabled we were using the NetworkService, but should
not when that is disabled.

Bug: 846637
Change-Id: If23aaf4e789c5c35f6d0bc754fec7a82b5f62898
Reviewed-on: https://chromium-review.googlesource.com/1074804
Reviewed-by: Kinuko Yasuda <kinuko@chromium.org>
Commit-Queue: Matt Falkenhagen <falken@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562202}
Former-commit-id: d2653866a102c51f59ee4ce55d04ddc26e919543